GEODE-10533: Fix Deprecated APIs in geode-gfsh Module