@@ -14,6 +14,7 @@
  */
 package org.apache.geode.management.internal.cli.functions;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -152,11 +153,12 @@ public class CreateAsyncEventQueueFunction extends CliFunction<CacheConfig.Async
   }
 
   private Object newInstance(String className)
-      throws ClassNotFoundException, IllegalAccessException, InstantiationException {
+      throws ClassNotFoundException, IllegalAccessException, InstantiationException,
+      NoSuchMethodException, InvocationTargetException {
     if (Strings.isNullOrEmpty(className)) {
       return null;
     }
 
-    return ClassPathLoader.getLatest().forName(className).newInstance();
+    return ClassPathLoader.getLatest().forName(className).getDeclaredConstructor().newInstance();
   }
 }
